@@ -5,26 +5,28 @@ DIST buildkernel-b2-1.0.0.tar.gz 20728 SHA256 53818fd27572a31803d3228b28852e9dd1
 DIST buildkernel-b2-1.0.1.tar.gz 20758 SHA256 d371514a1258936274d32b2f1ce28a65a023dffce64cb6e0dd3d5090ab1b799a SHA512 a20c894ba5c8f0b7644df85c76ed6ca994f54635bad7915ea307811d62ee9c7c0e7799dfc8b5c7e900209f182e29e0f6a18aa81e0eb98f04ae704c1003a5e9ba WHIRLPOOL ca20a40e8518ea6f784fca698c91dcda3fb8c90f9334aa2d0a0ebb567a361e0907e84a181eee312d331706e1d3bb1a4c3c0f68d83ea126dd4cc2824166fe13f6
 DIST buildkernel-b2-1.0.2.tar.gz 21688 SHA256 f1a6792c64174b434f80afb9b134085b08fc392d0648e77d302afee84bb67439 SHA512 4e1e8b8f623034ce600e08329943fbc7d92695609e273632e2d424f2dd178a8f9f99b2552a57427858d04691f8fc5823689bc5cad9a5b2ab3c5bed6881727dc0 WHIRLPOOL 65c2faf6a640efe38992faccd9d91f13e50f9e9a9a27329670fbb94a73f85c813a65ff850dac64e9e94f26c6263717fc96b0d3d1df931a15ad8eba8419a0f36a
 DIST buildkernel-b2-1.0.3.tar.gz 21698 SHA256 48c4e9f70b7bbb4f57e13c0cdad7adc31594a38dd050a5a2e1bbf3c4583caab8 SHA512 7a524a61bd2393c5082928cc84e597da075a705b4af642cad5a97403d7659dd3d7b7a53e493d0f5cd8e26d0fa255fa1fbcb6b08004f7bd0fcb60a87989efbdff WHIRLPOOL 403b4b425358651614b410945f422fc00276c8573e7c343d31b4db269dcc116390b4fac810f678572fe5c20089058132f594fb624728a7e93cb2c6971db74a1d
+DIST buildkernel-b2-1.0.4.tar.gz 21710 SHA256 71db94e1a5a303aae1dd1e625db8190643fe5386f3659f2bd719c3a704229532 SHA512 2f8d81bf8a8827e4a4e917a16b22b25e77de057d27430e012981def2f39895f0b2d27425c25eeb28bd9f5d56a33a3d7880eba3113d48cfcf4204063bc85db5f7 WHIRLPOOL cb39efe9b6c2e9039288ec427db33abf5b702aa730939185a4854e4591fa6bd4ea2a2be430736257229b681c4a18ad4a6dbd53f9ccd479a4034820b2a27956d9
 EBUILD buildkernel-b2-1.0.0.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
 EBUILD buildkernel-b2-1.0.1.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
 EBUILD buildkernel-b2-1.0.2.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
 EBUILD buildkernel-b2-1.0.3.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
-MISC ChangeLog 570 SHA256 892b0a4de598e638e35c4f406b3334deece22337f37902554beb7c1e795346bd SHA512 a250077ad6d79328c8061d9072af7dbd67f45114ff7b6789ca6dcb78047c81e328236c93f1b9cbb018d8b65f77594d0c020fba11361e79853e51184b69391b94 WHIRLPOOL c50d5584efc33abdd5a9983101fadbba52236cb1730d11f857fb304a0906de4c68745150abb8ba3408a77f0babb4fb64dcfcc4adaca43083ace8edec596b1b28
+EBUILD buildkernel-b2-1.0.4.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
+MISC ChangeLog 728 SHA256 18809f77315fd42f82b04bd8c07805f1c5fd90742b108bc759b72fe21601235b SHA512 f050e79184156bb9f3ffc64dd8e02c9a58ea7b226533cbf4a6c71ef050ad17d35670ff4b3a12e9f259c0e321d3092eaed546ca0c7453968908cbbbd9996f0ed6 WHIRLPOOL a25f41714677cc9bc6fc35215102a75413872e2e400a349837f20790c999ded20ed52a888122f7072f2338956d3d93eca5f09d66c2a30122e92e6b2986b033cf
 MISC metadata.xml 677 SHA256 7376f9667734790ff24118e33b1d906c472a4e191ab83ac2c85dbdbaae9c05c1 SHA512 dc5e32a202d802f883428aba344e9d321c3b80efe633ff159dbee62e985b16bd2249cac81707617782374026f97d67299db951bdd3cc14e6fb01a5092e708d1b WHIRLPOOL 00a8ceb8b9ca162aab74558a7108c54e371851f7185d31fef36e80e64f8c1c015f9489b13fc753339edff50777143af055a4a5fd4af690fe5537fe60b24063da
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUwwqeAAoJEDHIDbLd52zq414QALmxw/kdD0rqGkmHc+lj6ojN
-McLf99ILQs0PZqYkz2bEM8eLhImtmgO7W2tUeU/Ty4jgJyfZ9hSdvN2vET5r4RJf
-w58CvpH1VfVVHUMhMtJWPsh1OZnbd+qwCIv6dw9M+uaySuaLFR+8fuIk5bDTQ327
-c3EYFy1cKZCH3XAHff8WXgZohOck3AtRRryk+IRYRdEyZKH25rh4fBQrhWK76gLw
-Fn7rlL/V1cZVDe8ejhikINPBWIB2H1eD4Xsa2MRi9yy0yyAaxnXdxRvNOfDTG/Er
-sDuQwwRpNGZya3d4Zhmkk/Xah7qU0c78khsmBxnTF4cRBKJ9KAl250JYSr2rE1+D
-EKHYfK35ePbWYJEaJmKaKJVzoutqFGY9VquJZ+ayiWVWKSAG5s4A8fbl5aCdK2t1
-1Z1yEjtUf5ik0xXu0CD2RoWx37yvVrI7oaNxEB8eoWm3hVJfA3tjoTNtYGhxnikH
-6jE9KUowMtH01Qm+B/lc7aJ4dtL6dRxcp7PyfYuvzxzdu2rYzsazqnY0Y3S8XQNg
-G1VfklON6zfh7S0cxrx+k7NUKiPCKihkHeell6kZxsf2xJkadrYU1Zevb4NKbm5j
-WFGKWYmZLvZ3NgvZp8LyelxE6ayy6z4vLDlh0wafL+pBp+kjmOXHGMxIMOvUkMA7
-bWJVEwXBuYpeuEVOA5Cy
-=khkP
+iQIcBAEBCAAGBQJUw6dDAAoJEDHIDbLd52zqcp8P/j/fxDZRpcQRpAlC5FTKNt9o
+JKeUY6/ixD9icSHYO4hL0wWrT0TR0cJVuKadhD25GdVgnQG0jTylCReLIq3QfrbT
+4H7lEMX97lvvQNJTwJQKTdsvQqKrVePRfJz/zEdGucVz2WST5E9VH2GWgRVRgQur
+TsAjscgK78nFVmbR67XYxlL3lbee8Ffpas9w/lsPDCjnfYZ4v4EPg4zFTuttKN7p
+xJ2d43lDhxW7CB0ppphQ3cxibGU9BIDHxKJRHMiNz0Wy0qBmirqMaBPaOmqMfdjj
+HFLF7ncx95eJiokB/sX821Mcjl8C5a3N7Gcs14cu//5MRkY3AOa5igVZiOnXNE/1
+b021i6B27z5RASjE1vUBJdRoHNhzNSz+eWaDBhYxC+xkA2ysJ5b9mAQcF1LWFnmi
+mS/R7mEjhNbPxzrRrNx96XFp3lVI26zDVQSAVtdxdYZfJm5lp39ILjYiITgpsSxD
+8FrkXaLu2Fkx/waSo5hqny+s2yOTulUgH7Gthx+QA41wgRT/vjGkDUYxKYB0c5MW
+KfXV1+8gMtLFAk5Fq2ITnxPfZ3hGABErim00w4wIHtk0AjmBh9Z9hd5vDO4TBmPx
+vkKrE/sMstRglS1nF4ABvnh1iapD8l1mCiVuPL8exrfaSMqCIGskRRFI7SXF1OkZ
+N00aEAkRYmLXfs50fSS+
+=yIGa
 -----END PGP SIGNATURE-----
